feat:users reference on posts logic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
   </head>
 
   <body>
+    <%= render "/shared/nav" %>
+    <%= render "/shared/noticealert" %>
     <%= yield %>
   </body>
 </html>
